# routes/tasks.js
@@ -1,12 +1,16 @@
-const express = require('express');
+const express = require("express");
 const router = express.Router();
-const utilities = require('../utilities/index');
+const utilities = require("../utilities/index");
 
-const taskController = require('../controllers/tasks');
+const taskController = require("../controllers/tasks");
 
-router.get('/:id', utilities.handleErrors(taskController.getSingle));
-router.get('/', utilities.handleErrors(taskController.getAll));
+router.get("/:id", utilities.handleErrors(taskController.getSingle));
+router.get("/", utilities.handleErrors(taskController.getAll));
 
-router.delete('/:id', utilities.handleErrors(taskController.deleteTask));
+router.post("/", utilities.handleErrors(taskController.createTask));
+
+router.put("/:id", utilities.handleErrors(taskController.updateTask));
+
+router.delete("/:id", utilities.handleErrors(taskController.deleteTask));
 
 module.exports = router;
